[project]
name = "esbmc"
version = "8.0.0"
description = "ESBMC Python frontend development dependencies"
requires-python = ">=3.10"
dependencies = [
    "ast2json>=0.4",
    "mypy>=1.19.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pytest>=9.0.3",
]

[tool.pydocstyle]
# D211 (no blank line before class docstring) conflicts with D203; we follow D203.
# D212 (multi-line summary on first line) conflicts with D213; we follow D213.
add-ignore = "D211,D212"
