noinst_LIBRARIES = libpointeranalysis.a
libpointeranalysis_a_SOURCES = \
          value_set.cpp goto_program_dereference.cpp value_set_analysis.cpp \
          dereference.cpp show_value_sets.cpp value_set_domain.cpp \
          goto_program_dereference.cpp
AM_CXXFLAGS = $(ESBMC_CXXFLAGS) -I$(top_srcdir) -I$(top_srcdir)/util
